[package]
name = "second_chance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = "0.11.8"
serde = "1.0.132"
serde_derive = "1.0.132"
serde_json = "1.0.73"
tempfile = "3.2.0"
tokio = { version = "1.15.0", features = ["full"] }

[dependencies.time]
git = "https://github.com/time-rs/time"
rev = "f6baa3f"
features = ["serde-well-known"]